k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-3d
  labels:
    app: solar-system-3d
spec:
  selector:
    app: solar-system-3d
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
